<resources xmlns:xliff="http://schemas.android.com/apk/res-auto">
    <!-- translatable="false" indicates to translators don't translate string -->
    <!-- By convention, name of a string shown in action bar is prefixed action_ -->
    <string name="action_map">Map Location</string>
    <!-- Menu label to fetch updated weather info from the server -->
    <string name="action_refresh_title" translatable="false">Refresh</string>
    <string name="action_settings">Settings</string>
    <string name="action_share">Share</string>

    <string name="app_name">Sunshine</string>
    <string name="date">date</string>
    <string name="degreesC">°C</string>
    <string name="degreesF">°F</string>
    <string name="forecast">-</string>
    <string name="imageViewContentDescription">weather chart</string>


    <!-- Default postal code for location preference [CHAR LIMIT=NONE] -->
    <string name="pref_location_default" translatable="false">94043</string>
    <!-- Key name for storing location in SharedPreferences [CHAR LIMIT=NONE] -->
    <string name="pref_location_key" translatable="false">location</string>
    <!-- Key name for storing location status in SharedPreferences [CHAR LIMIT=NONE] -->
    <string name="pref_location_status_key" translatable="false">location_status</string>

    <!-- Title for the location preference [CHAR LIMIT=30] -->
    <string name="pref_location_title">Location</string>
    <string name="pref_units_imperial" translatable="false">imperial</string>
    <string name="pref_units_label_imperial">Imperial</string>
    <string name="pref_units_key" translatable="false">units</string>
    <string name="pref_units_label_metric">Metric</string>
    <string name="pref_units_metric" translatable="false">metric</string>
    <string name="pref_units_dialog_title">Pick Your Units</string>
    <string name="pref_units_title">Temperature Units</string>

    <!-- Label for the art pack preference [CHAR LIMIT=30] -->
    <string name="pref_art_pack_label">Icon Pack</string>

    <!-- Label for Sunshine option in art pack preference [CHAR LIMIT=25] -->
    <string name="pref_art_pack_label_sunshine">Sunshine</string>

    <!-- Label for colored option in art pack preference [CHAR LIMIT=25] -->
    <string name="pref_art_pack_label_colored">Colored</string>

    <!-- Label for mono option in art pack preference [CHAR LIMIT=25] -->
    <string name="pref_art_pack_label_mono">Mono</string>

    <!-- Key name for art pack unit preference in SharedPreferences [CHAR LIMIT=NONE] -->
    <string name="pref_art_pack_key" translatable="false">art_pack</string>

    <!-- Value in SharedPreferences for Sunshine art pack option [CHAR LIMIT=NONE] -->
    <string name="pref_art_pack_sunshine" translatable="false">https://raw.githubusercontent.com/udacity/Sunshine-Version-2/sunshine_master/app/src/main/res/drawable-xxhdpi/art_%s.png</string>

    <!-- Value in SharedPreferences for colored art pack option [CHAR LIMIT=NONE] -->
    <string name="pref_art_pack_colored" translatable="false">https://raw.githubusercontent.com/udacity/sunshine_icons/master/Archive/Colored/art_%s.png</string>

    <!-- Value in SharedPreferences for mono art pack option [CHAR LIMIT=NONE] -->
    <string name="pref_art_pack_mono" translatable="false">https://raw.githubusercontent.com/udacity/sunshine_icons/master/Archive/Mono/art_%s.png</string>

    <!-- Value in SharedPreferences for mono art pack  option [CHAR LIMIT=NONE] -->
    <!-- Strings used when displaying the state of the Location in settings -->
    <string name="pref_location_error_description">Invalid Location (<xliff:g id="location_setting">%1$s</xliff:g>)"</string>
    <string name="pref_location_unknown_description">Validating Location... (<xliff:g id="location_setting">%1$s</xliff:g>)"</string>

    <string name="title_activity_detail">Details</string>
    <string name="title_activity_settings">Settings</string>

    <string name="weather">weather</string>
    <string name="weather_description_image">weather description image</string>

    <!-- Language-specific constants -->
    <string name="today">Today</string>

    <!-- Format for retrieving art from an external source [CHAR LIMIT=NONE] -->
    <!-- string name="format_art_url" translatable="false">https://raw.githubusercontent.com/udacity/Sunshine-Version-2/sunshine_master/app/src/main/res/drawable-xxhdpi/art_<xliff:g id="description">%s</xliff:g>.png</string> -->
    <string name="format_art_url" translatable="false">https://github.com/beepscore/Sunshine/tree/master/app/src/main/res/drawable-xxhdpi/art_<xliff:g id="description">%s</xliff:g>.png</string>

    <!-- For labelling tomorrow's forecast [CHAR LIMIT=15] -->
    <string name="tomorrow">Tomorrow</string>

    <!-- Date format [CHAR LIMIT=NONE] -->
    <string name="format_full_friendly_date"><xliff:g id="month">%1$s</xliff:g>, <xliff:g id="day">%2$s</xliff:g></string>

    <!-- Strings for formatting weather-related data -->
    <!-- Temperature format [CHAR LIMIT=8 -->
    <string name="format_temperature"><xliff:g id="temperature">%1.0f</xliff:g><xliff:g id="temperature_unit">%2$s</xliff:g></string>
    <string name="weather_description_image_content_description">weather description image</string>

    <!-- Account type (for sync-adapter authenticator) -->
    <!-- SyncAdapter related -->
    <string name="sync_account_type">sunshine.beepscore.com</string>
    <string name="content_authority">com.beepscore.android.sunshine</string>

    <!-- Notification Format -->
    <string name="format_notification">
    Forecast: <xliff:g id="condition">%1$s</xliff:g> High: <xliff:g id="high">%2$s</xliff:g> Low: <xliff:g id="low">%3$s</xliff:g>
    </string>
    <!-- Strings related to Notification preference -->
    <string name="pref_last_notification">last_notification</string>
    <string name="enable_notifications" translatable="false">weather_notification</string>
    <string name="pref_weather_notification_title">Notification</string>

    <!-- Empty Weather Database -->
    <string name="empty_forecast_list">No Weather Information Available</string>
    <string name="empty_forecast_list_invalid_location">The location in settings is not recognized by the weather server.</string>
    <string name="empty_forecast_list_no_network">Network not reachable</string>
    <string name="location_status_ok">Location status ok</string>
    <string name="empty_forecast_list_server_down">Server down</string>
    <string name="empty_forecast_list_server_error">Server invalid</string>
    <string name="location_status_unknown">Location status unknown</string>
    <string name="ok">ok</string>

    <!-- Used to form a severe weather alert that reads "Heads up: <weather> in <location>!" -->
    <string name="gcm_weather_alert">Heads up: %1$s in %2$s!</string>

    <!-- TODO: Get the SenderID from the Developer Console -->
    <string name="gcm_defaultSenderId" translatable="false"></string>

</resources>
