<?xml version="1.0" encoding="utf-8"?>
<PreferenceScreen xmlns:android="http://schemas.android.com/apk/res/android"
                  xmlns:custom="http://schemas.android.com/apk/res/com.beepscore.android.sunshine"
                  android:layout_width="match_parent"
                  android:layout_height="match_parent">

    <com.beepscore.android.sunshine.LocationEditTextPreference
        android:key="@string/pref_location_key"
        android:title="@string/pref_location_title"
        android:defaultValue="@string/pref_location_default"
        android:inputType="text"
        android:singleLine="true"
        custom:minLength="3" />

    <ListPreference
        android:key="@string/pref_units_key"
        android:dialogTitle="@string/pref_units_dialog_title"
        android:title="@string/pref_units_title"
        android:entries="@array/pref_units_entries"
        android:entryValues="@array/pref_units_values"
        android:defaultValue="metric" />

    <ListPreference
        android:key="@string/pref_icon_pack_key"
        android:dialogTitle="@string/pref_icon_pack_dialog_title"
        android:title="@string/pref_icon_pack_title"
        android:entries="@array/pref_icon_pack_entries"
        android:entryValues="@array/pref_icon_pack_values"
        android:defaultValue="color" />

    <CheckBoxPreference
        android:key="@string/enable_notifications"
        android:title="@string/pref_weather_notification_title"
        android:defaultValue="true" />

</PreferenceScreen>
